--- a/index.html
+++ b/index.html
@@ -104,19 +104,7 @@
 		</article>
 		<div class="break"></div>
 	</section>
-	<section id="contact" class="section">
-		<div class="section-name"><img src="https://cdn.onlinewebfonts.com/svg/img_337273.png" alt="id icon" />Contact</div>
-		<form action="sendmail.php" method="POST">
-			<input type="text" name="Name">
-			<br>
-			<input type="email" name="Email">
-			<br>
-			<textarea id="Message" name="Message" cols="45" rows="5">
-			</textarea>
-			<input type="submit" name="Submit">
-		</form>
-
-	</section>
+	
 
 </div>
 
@@ -133,7 +121,7 @@
 	<div id="mail">CONTACT: inka.pelin13@gmail.com</div>
 	<div id="social">
 		<a href="https://www.linkedin.com/in/inka-pelin-65262b134/"><img alt="linkedin link" src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_black-512.png"></a>
-		<a href="https://www.linkedin.com/in/inka-pelin-65262b134/"><img alt="github link" src="https://image.flaticon.com/icons/svg/25/25231.svg"></a>
+		<a href=" https://github.com/Inka13"><img alt="github link" src="https://image.flaticon.com/icons/svg/25/25231.svg"></a>
 	</div>
 </div>
 
