--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<div id="moon-container">
 		<div id="circle">
-			<img src="moon.png">
+			<img src="images/moon.png">
 			<div id="over"></div>
 		</div>
 	</div>
@@ -23,8 +23,8 @@
 		<div id="logo">Inka Pelin</div>
 		<div id="header-options">
 			<a href="#work"><div class="options">Work</div></a>
-			<a href="#education"><div class="options">Education</div></a>
-			<a href="#life"><div class="options">Life</div></a>
+			<a href="#education"><div class="options">About me</div></a>
+			
 			<a href="#footer"><div class="options">Contact</div></a>
 		</div>
 	</div>
@@ -33,7 +33,7 @@
 
 
 	<div id="banner">
-		<img alt="banner" src="banner3.jpg" />
+		<img alt="banner" src="images/banner3.jpg" />
 		<div id="banner-cover"></div>
 	</div>
 	<div id="lets-explore">Let's explore!</div>
@@ -42,6 +42,29 @@
 
 	<section id="hello" class="section">
 		<div class="section-name"><img src="https://cdn.onlinewebfonts.com/svg/img_337273.png" alt="id icon" />Hello!</div>
+		<article id="about">
+			<p>I'm Inka and I'm aspiring to become a Web developer.</p>
+			<p>I aquired two certifications by solving challenges and doing projects on 
+				<a href="https://freecodecamp.org"><span class="fcc">freeCodeCamp</span></a>.</p>
+
+				<p><span class="work-name">Front end ceftificate of acommplishment</span> and</p> 
+				<p><span class="work-name">Data visulization ceftificate of acommplishment</span></p>
+				<p><a href="https://freecodecamp.org"><span class="fcc">freeCodeCamp </span></a> is a free online learning platform for developers
+				that guides you from the basics of HTML and CSS
+				to being able to develop full stack applications
+				and deploying them, through coding challenges,
+				reading and project assignments.</p> 
+				<p>They offer 3 certification levels and estimate 
+				the duration of completion time to 1300 hours:</p>
+				<p class="work-name">Front End === 500 h</p>
+				<p class="work-name">Data visualisation === 400 h</p>
+				<p class="work-name">Back End === 400 h</p>
+				<p>Tehnologies covered:<br></p>
+				<p class="fcc">HTML, CSS, Javascript, Bootstrap, jQuery,
+				React, D3, JSON API, Express, Node, MongoDB, Git</p>
+				<p>Currently 1/3 through Back end challenges :)</p>
+				<br>
+		</article>
 	</section>
 
 	<!-- WORK -->
@@ -50,55 +73,55 @@
 		<div class="section-name"><img src="http://www.iconsdb.com/icons/download/black/notebook-multi-size.ico" alt="id icon" />Work</div>
 
 		<article class="work-box">
-			<a href="https://codepen.io/Inka13/full/KXaxpO/" target="_blank"><img alt="link to simon game" src="simon.png" /></a>
+			<a href="https://codepen.io/Inka13/full/KXaxpO/" target="_blank"><img alt="link to simon game" src="images/simon.png" /></a>
 			<div class="work-text"><div class="date">Sep 26, 2017</div><span class="work-name">Simon</span> - freeCodeCamp project. Audio/visual memory game.</div>
 			<div class="break"></div>
 		</article>
 		<div class="break"></div>
 		<article class="work-box">
-			<a href="https://codepen.io/Inka13/full/XejWxR/" target="_blank"><img alt="link to a tic tac toe game" src="tictac.png" /></a>
+			<a href="https://codepen.io/Inka13/full/XejWxR/" target="_blank"><img alt="link to a tic tac toe game" src="images/tictac.png" /></a>
 			<div class="work-text"><div class="date">Sep 22, 2017</div><span class="work-name">Tic Tac Toe</span> - freeCodeCamp project. Bet you you can't win :) ...but you can try!</div>
 			<div class="break"></div>
 		</article>
 		<div class="break"></div>
 		<article class="work-box">
-			<a href="https://codepen.io/Inka13/full/YxJJjy/" target="_blank"><img alt="link to pomodoro clock app" src="pomodoro.png" /></a>
+			<a href="https://codepen.io/Inka13/full/YxJJjy/" target="_blank"><img alt="link to pomodoro clock app" src="images/pomodoro.png" /></a>
 			<div class="work-text"><div class="date">Aug 28, 2017</div><span class="work-name">Pomodoro clock</span> - freeCodeCamp project. The Pomodoro Technique is a time management method that uses a timer to break down work into intervals, traditionally 25 minutes in length, separated by short breaks.</div>
 			<div class="break"></div>
 		</article>
 		<div class="break"></div>
 		<article class="work-box">
-			<a href="https://codepen.io/Inka13/full/QMKbKE/" target="_blank"><img alt="link to calculator" src="calculator.png" /></a>
+			<a href="https://codepen.io/Inka13/full/QMKbKE/" target="_blank"><img alt="link to calculator" src="images/calculator.png" /></a>
 			<div class="work-text"><div class="date">Aug 02, 2017</div><span class="work-name">Calculator</span> - freeCodeCamp project. Simple calculator doing basic math operations.</div>
 			<div class="break"></div>
 		</article>
 		<div class="break"></div>
 		<article class="work-box">
-			<a href="https://codepen.io/Inka13/full/owRRKX/" target="_blank"><img alt="link to twitch app" src="twitch.png" /></a>
+			<a href="https://codepen.io/Inka13/full/owRRKX/" target="_blank"><img alt="link to twitch app" src="images/twitch.png" /></a>
 			<div class="work-text"><div class="date">Jul 20, 2017</div><span class="work-name">Twitch app</span> - freeCodeCamp project. Checking online activity of a list of streaming channels.</div>
 			<div class="break"></div>
 		</article>
 		<div class="break"></div>
 		<article class="work-box">
-			<a href="https://codepen.io/Inka13/full/Xgveoq/" target="_blank"><img alt="link to wikipedia search" src="wiki.png" /></a>
+			<a href="https://codepen.io/Inka13/full/Xgveoq/" target="_blank"><img alt="link to wikipedia search" src="images/wiki.png" /></a>
 			<div class="work-text"><div class="date">Jul 19, 2017</div><span class="work-name">Wiki search</span> - freeCodeCamp project. Quick Wikipedia search.</div>
 			<div class="break"></div>
 		</article>
 		<div class="break"></div>
 		<article class="work-box">
-			<a href="https://codepen.io/Inka13/full/EXzJWm/" target="_blank"><img alt="link to local weather app" src="weather.png" /></a>
+			<a href="https://codepen.io/Inka13/full/EXzJWm/" target="_blank"><img alt="link to local weather app" src="images/weather.png" /></a>
 			<div class="work-text"><div class="date">Jul 18, 2017</div><span class="work-name">Local Weather App</span> - freeCodeCamp project. See what the weather outside is without leaving the bed :)</div>
 			<div class="break"></div>
 		</article>
 		<div class="break"></div>
 		<article class="work-box">
-			<a href="https://codepen.io/Inka13/full/eEZxEK/" target="_blank"><img alt="link to random quote generator" src="random.png" /></a>
+			<a href="https://codepen.io/Inka13/full/eEZxEK/" target="_blank"><img alt="link to random quote generator" src="images/random.png" /></a>
 			<div class="work-text"><div class="date">Jul 16, 2017</div><span class="work-name">Random Quote Generator</span> - freeCodeCamp project. Just what the name says - a random quote generator.</div>
 			<div class="break"></div>
 		</article>
 		<div class="break"></div>
 		<article class="work-box">
-			<a href="http://www.margaretalekic.com/" target="_blank"><img alt="link to Margareta Lekić professional page" src="margareta.png" /></a>
+			<a href="http://www.margaretalekic.com/" target="_blank"><img alt="link to Margareta Lekić professional page" src="images/margareta.png" /></a>
 			<div class="work-text"><div class="date">Jan 11, 2017</div><span class="work-name">Margareta Lekic</span> - Margareta is a local artist sculptor and a professor at the Academy of Arts in Osijek. This is her personal professional page.</div>
 			<div class="break"></div>
 		</article>
@@ -113,8 +136,8 @@
 <div id="footer">
 	<div id="footer-options">
 		<a href="#work"><div class="options">Work</div></a>
-		<a href="#education"><div class="options">Education</div></a>
-		<a href="#life"><div class="options">Life</div></a>
+		<a href="#education"><div class="options">About me</div></a>
+		
 		<a href="#logo"><div class="options">Back Up</div></a>
 	</div>
 	<div class="break"><br /></div>
