--- a/index.html
+++ b/index.html
@@ -71,7 +71,33 @@
 
 	<section id="work" class="section">
 		<div class="section-name"><img src="http://www.iconsdb.com/icons/download/black/notebook-multi-size.ico" alt="id icon" />Work</div>
-
+		<article class="work-box">
+			<a href="https://github.com/Inka13/dungeon-crawler" target="_blank"><img alt="link to dungeon crawler" src="images/dungeon.png" /></a>
+			<div class="work-text"><div class="date">Nov 26, 2017</div><span class="work-name">Dungeon crawler</span> - freeCodeCamp project. Game build with React.</div>
+			<div class="break"></div>
+		</article>
+		<article class="work-box">
+			<a href="https://github.com/Inka13/game-of-life" target="_blank"><img alt="link to game of life" src="images/game.png" /></a>
+			<div class="work-text"><div class="date">Nov 26, 2017</div><span class="work-name">Game of Life</span> - freeCodeCamp project. John Conway's Game of life</div>
+			<div class="break"></div>
+		</article>
+		<article class="work-box">
+			<a href="https://github.com/Inka13/recipe-box" target="_blank"><img alt="link to recipe box" src="images/recipe.png" /></a>
+			<div class="work-text"><div class="date">Nov 26, 2017</div><span class="work-name">Recipe Box</span> - freeCodeCamp project.</div>
+			<div class="break"></div>
+		</article>
+		<article class="work-box">
+			<a href="https://github.com/Inka13/camper-leaderboard" target="_blank"><img alt="link to camper-leaderboard" src="images/camper.png" /></a>
+			<div class="work-text"><div class="date">Nov 26, 2017</div><span class="work-name">Camper leaderboard</span> - freeCodeCamp project. Tabel of best campers on freeCodeCamp</div>
+			<div class="break"></div>
+		</article>
+		<article class="work-box">
+			<a href="https://github.com/Inka13/markdown-live-previewer" target="_blank"><img alt="link to markdown previewer" src="images/markdown.png" /></a>
+			<div class="work-text"><div class="date">Nov 26, 2017</div><span class="work-name">Markdown live previewer</span> - freeCodeCamp project. Live previewer of your markdown.</div>
+			<div class="break"></div>
+		</article>
+		<div class="break"></div>
+		
 		<article class="work-box">
 			<a href="https://codepen.io/Inka13/full/KXaxpO/" target="_blank"><img alt="link to simon game" src="images/simon.png" /></a>
 			<div class="work-text"><div class="date">Sep 26, 2017</div><span class="work-name">Simon</span> - freeCodeCamp project. Audio/visual memory game.</div>
