--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div id="logo">Inka Pelin</div>
 		<div id="header-options">
 			<a href="#work"><div class="options">Work</div></a>
-			<a href="#education"><div class="options">About me</div></a>
+			<a href="#hello"><div class="options">About me</div></a>
 			
 			<a href="#footer"><div class="options">Contact</div></a>
 		</div>
