--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 <div id="footer">
 	<div id="footer-options">
 		<a href="#work"><div class="options">Work</div></a>
-		<a href="#education"><div class="options">About me</div></a>
+		<a href="#hello"><div class="options">About me</div></a>
 		
 		<a href="#logo"><div class="options">Back Up</div></a>
 	</div>
