added certification links

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 			<p>I aquired two certifications by solving challenges and doing projects on 
 				<a href="https://freecodecamp.org"><span class="fcc">freeCodeCamp</span></a>.</p>
 
-				<p><span class="work-name">Front end ceftificate of acommplishment</span> and</p> 
-				<p><span class="work-name">Data visulization ceftificate of acommplishment</span></p>
+				<p><a href="https://www.freecodecamp.org/inka13/front-end-certification" class="work-name">Front end ceftificate of acommplishment</a> and</p> 
+				<p><a href="https://www.freecodecamp.org/inka13/data-visualization-certification" class="work-name">Data visulization ceftificate of acommplishment</a></p>
 				<p><a href="https://freecodecamp.org"><span class="fcc">freeCodeCamp </span></a> is a free online learning platform for developers
 				that guides you from the basics of HTML and CSS
 				to being able to develop full stack applications
@@ -56,7 +56,7 @@
 				reading and project assignments.</p> 
 				<p>They offer 3 certification levels and estimate 
 				the duration of completion time to 1300 hours:</p>
-				<p class="work-name">Front End === 500 h</p>
+				<p class="work-name">Front End === 500 h</p></a>
 				<p class="work-name">Data visualisation === 400 h</p>
 				<p class="work-name">Back End === 400 h</p>
 				<p>Tehnologies covered:<br></p>
