--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
 	<section id="work" class="section">
 		<div class="section-name"><img src="http://www.iconsdb.com/icons/download/black/notebook-multi-size.ico" alt="id icon" />Work</div>
 		<article class="work-box">
+			<a href="https://polling-app-inka.glitch.me/" target="_blank"><img alt="link to voting-app" src="images/voting.png" /></a>
+			<div class="work-text"><div class="date">Jan 25, 2017</div><span class="work-name">Voting App</span> - freeCodeCamp project. Build with React, Express, MongoDB, Node.</div>
+			<div class="break"></div>
+		</article>
+		<article class="work-box">
 			<a href="https://github.com/Inka13/dungeon-crawler" target="_blank"><img alt="link to dungeon crawler" src="images/dungeon.png" /></a>
 			<div class="work-text"><div class="date">Jan 5, 2017</div><span class="work-name">Dungeon crawler</span> - freeCodeCamp project. Game build with React.</div>
 			<div class="break"></div>
@@ -99,49 +104,49 @@
 		<div class="break"></div>
 		
 		<article class="work-box">
-			<a href="https://codepen.io/Inka13/full/KXaxpO/" target="_blank"><img alt="link to simon game" src="images/simon.png" /></a>
+			<a href="https://inka13.github.io/simon-game/" target="_blank"><img alt="link to simon game" src="images/simon.png" /></a>
 			<div class="work-text"><div class="date">Sep 26, 2017</div><span class="work-name">Simon</span> - freeCodeCamp project. Audio/visual memory game.</div>
 			<div class="break"></div>
 		</article>
 		<div class="break"></div>
 		<article class="work-box">
-			<a href="https://codepen.io/Inka13/full/XejWxR/" target="_blank"><img alt="link to a tic tac toe game" src="images/tictac.png" /></a>
+			<a href="https://inka13.github.io/tic-tac-toe-game/" target="_blank"><img alt="link to a tic tac toe game" src="images/tictac.png" /></a>
 			<div class="work-text"><div class="date">Sep 22, 2017</div><span class="work-name">Tic Tac Toe</span> - freeCodeCamp project. Bet you you can't win :) ...but you can try!</div>
 			<div class="break"></div>
 		</article>
 		<div class="break"></div>
 		<article class="work-box">
-			<a href="https://codepen.io/Inka13/full/YxJJjy/" target="_blank"><img alt="link to pomodoro clock app" src="images/pomodoro.png" /></a>
+			<a href="https://inka13.github.io/pomodoro-clock/" target="_blank"><img alt="link to pomodoro clock app" src="images/pomodoro.png" /></a>
 			<div class="work-text"><div class="date">Aug 28, 2017</div><span class="work-name">Pomodoro clock</span> - freeCodeCamp project. The Pomodoro Technique is a time management method that uses a timer to break down work into intervals, traditionally 25 minutes in length, separated by short breaks.</div>
 			<div class="break"></div>
 		</article>
 		<div class="break"></div>
 		<article class="work-box">
-			<a href="https://codepen.io/Inka13/full/QMKbKE/" target="_blank"><img alt="link to calculator" src="images/calculator.png" /></a>
+			<a href="https://inka13.github.io/Calculator/" target="_blank"><img alt="link to calculator" src="images/calculator.png" /></a>
 			<div class="work-text"><div class="date">Aug 02, 2017</div><span class="work-name">Calculator</span> - freeCodeCamp project. Simple calculator doing basic math operations.</div>
 			<div class="break"></div>
 		</article>
 		<div class="break"></div>
 		<article class="work-box">
-			<a href="https://codepen.io/Inka13/full/owRRKX/" target="_blank"><img alt="link to twitch app" src="images/twitch.png" /></a>
+			<a href="https://inka13.github.io/twitchTV/" target="_blank"><img alt="link to twitch app" src="images/twitch.png" /></a>
 			<div class="work-text"><div class="date">Jul 20, 2017</div><span class="work-name">Twitch app</span> - freeCodeCamp project. Checking online activity of a list of streaming channels.</div>
 			<div class="break"></div>
 		</article>
 		<div class="break"></div>
 		<article class="work-box">
-			<a href="https://codepen.io/Inka13/full/Xgveoq/" target="_blank"><img alt="link to wikipedia search" src="images/wiki.png" /></a>
+			<a href="https://inka13.github.io/wiki-search/" target="_blank"><img alt="link to wikipedia search" src="images/wiki.png" /></a>
 			<div class="work-text"><div class="date">Jul 19, 2017</div><span class="work-name">Wiki search</span> - freeCodeCamp project. Quick Wikipedia search.</div>
 			<div class="break"></div>
 		</article>
 		<div class="break"></div>
 		<article class="work-box">
-			<a href="https://codepen.io/Inka13/full/EXzJWm/" target="_blank"><img alt="link to local weather app" src="images/weather.png" /></a>
+			<a href="https://inka13.github.io/weather-app/" target="_blank"><img alt="link to local weather app" src="images/weather.png" /></a>
 			<div class="work-text"><div class="date">Jul 18, 2017</div><span class="work-name">Local Weather App</span> - freeCodeCamp project. See what the weather outside is without leaving the bed :)</div>
 			<div class="break"></div>
 		</article>
 		<div class="break"></div>
 		<article class="work-box">
-			<a href="https://codepen.io/Inka13/full/eEZxEK/" target="_blank"><img alt="link to random quote generator" src="images/random.png" /></a>
+			<a href="https://inka13.github.io/quote-generator/" target="_blank"><img alt="link to random quote generator" src="images/random.png" /></a>
 			<div class="work-text"><div class="date">Jul 16, 2017</div><span class="work-name">Random Quote Generator</span> - freeCodeCamp project. Just what the name says - a random quote generator.</div>
 			<div class="break"></div>
 		</article>
