--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 	<!-- WORK -->
 
 	<section id="work" class="section">
-		<div class="section-name"><img src="http://www.iconsdb.com/icons/download/black/notebook-multi-size.ico" alt="id icon" />Work</div>
+		<div class="section-name">Work</div>
 		<article class="work-box">
 			<a href="https://polling-app-inka.glitch.me/" target="_blank"><img alt="link to voting-app" src="images/voting.png" /></a>
-			<div class="work-text"><div class="date">Jan 25, 2017</div><span class="work-name">Voting App</span> - freeCodeCamp project. Build with React, Express, MongoDB, Node.</div>
+			<div class="work-text"><div class="date">Jan 25, 2017</div><span class="work-name">Voting App</span> - freeCodeCamp project. Build with React, Redux, Express, MongoDB, Node.</div>
 			<div class="break"></div>
 		</article>
 		<article class="work-box">
@@ -93,7 +93,7 @@
 		</article>
 		<article class="work-box">
 			<a href="https://github.com/Inka13/camper-leaderboard" target="_blank"><img alt="link to camper-leaderboard" src="images/camper.png" /></a>
-			<div class="work-text"><div class="date">Nov 26, 2017</div><span class="work-name">Camper leaderboard</span> - freeCodeCamp project. Tabel of best campers on freeCodeCamp</div>
+			<div class="work-text"><div class="date">Nov 26, 2017</div><span class="work-name">Camper leaderboard</span> - freeCodeCamp project. Table of best campers on freeCodeCamp</div>
 			<div class="break"></div>
 		</article>
 		<article class="work-box">
