--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 		<div class="section-name"><img src="https://cdn.onlinewebfonts.com/svg/img_337273.png" alt="id icon" />Hello!</div>
 		<article id="about">
 			<p>I'm Inka and I'm aspiring to become a Web developer.</p>
+			<p>My learning path consists of watching tutorials and courses on Coursera, Udemy, edX, Lynda, Sololearn, and using platforms like Codecademy, freeCodeCamp, HackerRank and others.<p>
 			<p>I aquired two certifications by solving challenges and doing projects on 
 				<a href="https://freecodecamp.org"><span class="fcc">freeCodeCamp</span></a>.</p>
 
