--- a/index.html
+++ b/index.html
@@ -73,13 +73,18 @@
 	<section id="work" class="section">
 		<div class="section-name">Work</div>
 		<article class="work-box">
+			<a href="https://where-to.glitch.me/" target="_blank"><img alt="link to where-to-app" src="images/whereto.png" /></a>
+			<div class="work-text"><div class="date">Feb 5, 2018</div><span class="work-name">WhereTo?</span> - freeCodeCamp project. Build with React, Redux, Express, MongoDB, Node. Search for bars, restaurants, museums... Near you or any major city in the world!</div>
+			<div class="break"></div>
+		</article>
+		<article class="work-box">
 			<a href="https://polling-app-inka.glitch.me/" target="_blank"><img alt="link to voting-app" src="images/voting.png" /></a>
-			<div class="work-text"><div class="date">Jan 25, 2017</div><span class="work-name">Voting App</span> - freeCodeCamp project. Build with React, Redux, Express, MongoDB, Node.</div>
+			<div class="work-text"><div class="date">Jan 25, 2018</div><span class="work-name">Voting App</span> - freeCodeCamp project. Build with React, Redux, Express, MongoDB, Node.</div>
 			<div class="break"></div>
 		</article>
 		<article class="work-box">
 			<a href="https://github.com/Inka13/dungeon-crawler" target="_blank"><img alt="link to dungeon crawler" src="images/dungeon.png" /></a>
-			<div class="work-text"><div class="date">Jan 5, 2017</div><span class="work-name">Dungeon crawler</span> - freeCodeCamp project. Game build with React.</div>
+			<div class="work-text"><div class="date">Jan 5, 2018</div><span class="work-name">Dungeon crawler</span> - freeCodeCamp project. Game build with React.</div>
 			<div class="break"></div>
 		</article>
 		<article class="work-box">
